--- a/xananas-garden/package.json
+++ b/xananas-garden/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.0",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.21",
@@ -20,5 +23,10 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "prisma": "^4.13.0"
   }
 }
