--- a/xananas-garden/package.json
+++ b/xananas-garden/package.json
@@ -6,14 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:dev": "jest --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.13.0",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
@@ -30,7 +29,17 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.1",
-    "prisma": "^4.13.0"
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
+    "@types/react-dom": "18.0.11",
+    "@types/supertest": "^2.0.12",
+    "@types/webpack-env": "^1.18.0",
+    "jest": "^29.5.0",
+    "prisma": "^4.13.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "webpack-env": "^0.8.0"
   }
 }
