--- a/xananas-garden/.env
+++ b/xananas-garden/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
-JWT_SECRET="dev"
+JWT_SECRET="6c80e50193706f4f1abe459f7d22bb84"
