--- a/xananas-garden/package.json
+++ b/xananas-garden/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV=development next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:dev": "jest --watch"
+    "test": "NODE_ENV=test jest",    
+    "test:dev": "NODE_ENV=test jest --watch",
+    "migrate-test": "npx prisma migrate dev --schema=./prisma/schema.test.prisma",
+    "studio-test": "npx prisma studio --schema=./prisma/schema.test.prisma"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
