--- a/xananas-garden/package.json
+++ b/xananas-garden/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.13.0",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-toast": "^1.1.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
