--- a/xananas-garden/package.json
+++ b/xananas-garden/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
+    "lucide-react": "^0.224.0",
     "next": "13.3.0",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.21",
@@ -40,7 +41,10 @@
     "@types/react-dom": "18.0.11",
     "@types/supertest": "^2.0.12",
     "@types/webpack-env": "^1.18.0",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4",
     "jest": "^29.5.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.13.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
